[package]
name = "sastran"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Unified KV + vector storage engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Joker2841/sastran"

[dependencies]
thiserror = "2"
crc32fast = "1.4"
bytes = "1.7"
tracing = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"
proptest = "1.5"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[profile.release]
# Optimize aggressively for benchmarks; we want honest numbers.
lto = "fat"
codegen-units = 1
debug = true  # Keep debug symbols so flamegraphs are useful.

[profile.bench]
inherits = "release"

[[bench]]
name = "writes"
harness = false

[[bench]]
name = "reads_hit"
harness = false

[[bench]]
name = "reads_miss"
harness = false

[[bench]]
name = "mixed"
harness = false